Now works all right

--- a/FindHiddenWords/Info.plist
+++ b/FindHiddenWords/Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string></string>
 </dict>
 </plist>
